.kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-service-web-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-service-web
      version: v1
  template:
    metadata:
      labels:
        app: client-service-web
        version: v1
    spec:
      containers:
      - name: client-service-web
        image: input_image
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
