.kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service-web-svc
  labels:
    app: client-service-web
    service: client-service-web-svc
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: client-service-web
