.kustomize/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: client-service-web-gw
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api
spec:
  hosts:
  - "*"
  gateways:
  - client-service-web-gw
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: client-service-web-svc
        port:
          number: 3000
